--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai": "^1.9.0"
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "xss-filters": "^1.2.6"
   }
