--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Hack Reactor",
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
   "scripts": {
-    "start": "node server/basic-server.js",
+    "start": "node server/app.js",
     "test": "mocha server/spec"
   },
   "devDependencies": {
