removing extra app.js and fixing json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatterbox",
   "version": "0.0.1",
-  "main": "server/app.js",
+  "main": "app.js",
   "author": "Hack Reactor",
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
   "scripts": {
